<resources>
    <string name="app_name">MoovIn5</string>

    <!-- Activity Title -->
    <string name="title_activity_setting">Settings</string>
    <string name="title_activity_motivation">MoovIt</string>
    <string name="title_activity_gym_location">Gym Location</string>


    <!-- Main Activity -->
    <string name="action_settings">Settings</string>
    <string name="card_header_main_picker">Duration</string>
    <string name="card_home_text">Home</string>
    <string name="card_gym_text">Outdoor</string>
    <string name="popup_gym">GYM</string>



    <!-- Preference name & key -->

    <string name="pref_tutorial_key">tutorial</string>

    <string name="pref_category_workout">Workout</string>
    <string name="pref_category_options">Options</string>
    <string name="pref_category_misc">Misc.</string>

    <!-- workout category -->
    <string name="pref_warmup">Warmup duration</string>
    <string name="pref_warmup_key">warmup</string>
    <string name="pref_stretching">Streching + shower duration</string>
    <string name="pref_stretching_key">stretching</string>
    <string name="pref_summary_minute">Minutes</string>
    <string name="pref_workout_key">workout</string>
    <string name="pref_home_mode_key">home_mode</string>
    <!-- options category -->
    <string name="pref_is_celsius">Temperature unit</string>
    <string name="pref_is_celsius_key">unit</string>
    <string name="pref_is_celsius_celsius">Celsius</string>
    <string name="pref_is_celsius_fahrenheit">Fahrenheit</string>
    <!-- misc category -->
    <string name="pref_start_tutorial">Restart tutorial</string>
    <string name="pref_start_tutorial_key">restart_tutorial</string>
    <string name="pref_start_tutorial_summary">Gym location is deleted.
        \nThe other settings remain safe.</string>
    <string name="pref_credits">Credits</string>
    <string name="pref_credits_key">credits</string>
    <string name="pref_feedback">Send feedback</string>
    <string name="pref_feedback_key">feedback</string>
    <string name="pref_rate">Rate the app</string>
    <string name="pref_rate_key">rate</string>

    <string name="pref_feedback_email">shockn745@gmail.com</string>
    <string name="pref_feedback_subject">FEEDBACK : MoovIn5</string>
    <string name="pref_feedback_body">Please enter your feedback here.
        \nI\'m glad to hear from you :)</string>


    <string name="pref_card_weather_displayed">card_weather_displayed</string>
    <string name="pref_card_route_displayed">card_route_displayed</string>
    <string name="pref_card_calories_displayed">card_calories_displayed</string>



    <!-- GymLocationActivity -->
    <string name="gym_location_hint">Long press to select</string>


    <!-- MotivationActivity -->
    <!-- Add Card Menu -->
    <string name="add_card_menu_weather">Weather</string>
    <string name="add_card_menu_route">Route</string>
    <string name="add_card_menu_calories">Calories</string>
    <string name="add_card_menu_empty_set">No cards to add\n\nSwipe to remove a card</string>
    <string name="add_card_menu_toast_part_1">Card</string>
    <string name="add_card_menu_toast_part_2">added</string>
    <string name="add_card_menu_non_dissmissable_toast">This card cannot be dismissed</string>

    <!-- Card Headers -->
    <string name="card_header_back_at_home">If you move in the next 5 minutes</string>
    <string name="card_header_route">Route</string>
    <string name="card_header_weather">Weather</string>
    <string name="card_header_calories">Estimated calories</string>
    <string name="card_header_loading">Contacting your coach</string>

    <!-- BackAtHome Card -->
    <string name="back_at_home_card_motivational_intro">You will be ready to : \n</string>
    <string-array name="back_at_home_card_motivational_array">
        <item>Go to the club</item>
        <item>Chill at home</item>
        <item>Go to your date</item>
        <item>Cook dinner</item>
        <item>Enjoy the endorphin rush</item>
        <item>Hang out with your friends</item>
        <item>Get a beer</item>
        <item>Watch a movie</item>
        <item>Get back to work</item>
        <item>Go to a concert</item>
    </string-array>

    <!-- Calorie Card -->
    <string name="calories_cals">Cals</string>
    <string name="calories_croissant">Croissant</string>
    <string name="calories_balanced">Balanced meal</string>
    <string name="calories_pizza">Pizza slice</string>
    <string name="calories_chocolate">Chocolate bar</string>

    <!-- Alert dialog -->
    <string name="warning_not_initialized_edit_text">Please initialise the gym location !</string>
    <string name="alert_location_fail">Unable to obtain a location, please check the
        following elements and retry :\n
        - Turn on GPS\n
        - Turn on WiFi\n
        - Allow this application to access your location
    </string>
    <string name="alert_dismiss">Dismiss</string>
    <string name="alert_fail">Unknown error, please try again!</string>
    <string name="alert_connection_fail">Connection failed,
        please check your internet connection</string>
    <string name="alert_transit_no_routes">No route found between your location and your gym
        \nPlease check the gym location!</string>
    <string name="title_activity_tutorial_activity_step1">TutorialActivityStep1</string>

    <string name="title_activity_tutorial_activity_step2">TutorialActivityStep2</string>
    <string name="title_activity_tutorial_activity_step3">TutorialActivityStep3</string>
    <string name="title_activity_tutorial_activity_step4">TutorialActivityStep4</string>
    <string name="title_activity_tutorial_final_step">TutorialFinalStep</string>



    <!-- AppRater -->
    <!-- Neutral & negative seem reversed, but it's to have a better organisation of the buttons -->
    <string name="app_rater_dialog_title">Rate</string>
    <string name="app_rater_dialog_positive">Rate it!</string>
    <string name="app_rater_dialog_neutral">Never</string>
    <string name="app_rater_dialog_negative">Later</string>
    <string name="app_rater_dialog_message_part_1">If you enjoy using </string>
    <string name="app_rater_dialog_message_part_2">,
        please take a moment to rate it.\nThanks for your support!</string>



    <!-- Credits -->
    <string name="credits_message"><div>Icon made by
        <a href="http://www.unocha.org" title="OCHA">OCHA</a>
            from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>
            is licensed under
            <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">
                CC BY 3.0</a>
        </div>
        \n<div>Icon made by <a href="http://www.freepik.com" title="Freepik">Freepik</a>
            from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>
            is licensed under
            <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">
                CC BY 3.0</a>
        </div>
        \n<div>Background image made by
            <a href="http://www.shutterstock.com/gallery-1621796p1.html" title="Pulvas">Pulvas</a>
            from
            <a href="http://www.shutterstock.com/" title="ShutterStock">www.ShutterStock.com</a>
        </div>
        \n<div>Launcher icon made by
            <a href="http://www.shutterstock.com/gallery-2084027p1.html" title="Yershov Oleksandr">
                Yershov Oleksandr</a>
            from
            <a href="http://www.shutterstock.com/" title="ShutterStock">www.ShutterStock.com</a>
        </div>
    </string>

</resources>
