<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="30dp"
    tools:context=".MainActivity$PlaceholderFragment">

    <!-- Home / Gym Card -->
    <RelativeLayout
        android:id="@+id/main_home_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_card_home_height"
        android:layout_centerHorizontal="true">

        <!-- Change GYM location card -->
        <android.support.v7.widget.CardView
            style="@style/Card"
            android:id="@+id/main_change_gym_card_view"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_centerVertical="true"
            android:layout_alignEnd="@+id/main_home_card_view"
            android:translationX="35dp"
            card_view:cardBackgroundColor="@color/accent"
            >
            <TextView
                style="@style/TextView.Content.GymVariation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/accent"
                android:text="GYM"
                android:gravity="center_horizontal"
                android:rotation="90"/>
        </android.support.v7.widget.CardView>

        <!-- Home Card -->
        <android.support.v7.widget.CardView
            style="@style/Card.GymHomeVariation"
            android:id="@+id/main_home_card_view">
            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@color/primary">
                <ImageView
                    android:id="@+id/main_home_image_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/main_home"
                    android:background="@color/primaryDark"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"/>
                <TextView
                    style="@style/TextView.Content.MainInfo.GeneralVariation.HomeVariation"
                    android:id="@+id/main_home_text_view"
                    android:text="@string/card_home_text"
                    android:layout_toEndOf="@id/main_home_image_view"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>
        <!-- Gym Card -->
        <android.support.v7.widget.CardView
            style="@style/Card.GymHomeVariation"
            android:id="@+id/main_gym_card_view">
            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@color/primary">
                <ImageView
                    android:id="@+id/main_gym_image_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/main_mountain"
                    android:background="@color/primaryDark"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"/>
                <TextView
                    style="@style/TextView.Content.MainInfo.GeneralVariation.HomeVariation"
                    android:id="@+id/main_gym_text_view"
                    android:layout_toEndOf="@id/main_gym_image_view"
                    android:text="@string/card_gym_text"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </RelativeLayout>


    <android.support.v7.widget.CardView
        style="@style/Card"
        android:id="@+id/main_picker_card_view"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/main_card_picker_height"
        android:layout_below="@id/main_home_relative_layout"
        android:layout_centerHorizontal="true"
        card_view:cardElevation="4dp"
        card_view:cardBackgroundColor="@color/primary">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                style="@style/TextView.Header"
                android:layout_width="wrap_content"
                android:paddingEnd="10dp"
                android:text="@string/card_header_main_picker"
                />
            <com.shockn745.moovin5.main.CustomNumberPicker
                android:id="@+id/duration_picker"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <ImageButton
        android:id="@+id/main_moovit_button"
        style="@style/FloatingActionButton.Default"
        android:src="@drawable/ic_done"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/fab_margin_bottom" />

    <TextView
        android:id="@+id/warning_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ff0000"
        android:text="@string/warning_not_initialized_edit_text"
        android:layout_below="@id/main_picker_card_view"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

</RelativeLayout>
